--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "stylelint": "^8.0.0",
         "stylelint-config-recommended": "^1.0.0"
     },
-    "dependencies": {},
+    "dependencies": {
+        "bootstrap-slider": "^10.0.0"
+    },
     "stylelint": {
         "extends": "stylelint-config-recommended"
     },
